--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,14 @@ body {
     outline-offset: 2px;
 }
 
+.order-success {
+    padding: 1.5rem;
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #2e7d32;
+    text-align: center;
+}
+
 .cart__items:empty::after {
     content: "Корзина пуста";
     color: #999;
